<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/toolbarColor">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adding_a_new_playlist"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist_secondary_txt"
        android:textColor="@color/clickable_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/start_by_choosing_your_playlist_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:translationX="-500dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        tools:alpha="1"
        tools:translationX="0dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/PlaylistAddTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        tools:alpha="1"
        tools:translationX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/enter_url"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:translationX="-500dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        tools:alpha="1"
        tools:translationX="0dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/youtube_playlist_only"
        android:textColor="@color/clickable_color"
        android:textSize="@dimen/_9ssp"
        android:translationX="-500dp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        tools:alpha="1"
        tools:translationX="0dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_layout"
        style="@style/PlaylistAddTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:alpha="1"
        tools:translationX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/url_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:backgroundTint="@color/clickable_color"
        android:paddingVertical="@dimen/_11sdp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextOnSurface"
        android:textSize="@dimen/_11ssp"
        android:translationX="500dp"
        app:cornerRadius="@dimen/defaultCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/url_layout"
        tools:alpha="1"
        tools:translationX="0dp" />

    <TextView
        android:id="@+id/fetching_state_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetching_state_first"
        android:textColor="@color/icons_color"
        android:textSize="@dimen/_10ssp"
        android:translationX="-500dp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/add_btn"
        tools:translationX="0dp" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/fetching_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progress="100"
        android:translationX="500dp"
        app:indicatorColor="@color/clickable_color"
        app:indicatorDirectionCircular="counterclockwise"
        app:indicatorSize="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/add_btn"
        app:trackThickness="@dimen/_2sdp"
        tools:translationX="0dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="fetching_pb, fetching_state_txt"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/add_new_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new"
        android:textColor="@color/white"
        android:translationX="500dp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/url_layout"
        tools:translationX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>