<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:checkedChip="@id/filter_all"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_all"
                style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_video"
                style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_audio"
                style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/downloaded_only_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/downloaded_only"
            android:textColor="@color/primaryTextOnSurface"
            android:textDirection="ltr"
            android:textSize="@dimen/_10ssp"
            app:buttonTint="@color/toolbarColor"
            app:layout_constraintBottom_toBottomOf="@+id/filter"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="@+id/filter" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/singles_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            tools:listitem="@layout/list_item_single_info" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_single_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/add_playlist"
            android:src="@drawable/ic_single_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty_list_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty_list" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/click_here_img"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toTopOf="@+id/add_single_btn"
            app:layout_constraintEnd_toEndOf="@+id/add_single_btn"
            app:layout_constraintStart_toStartOf="@+id/add_single_btn"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/toolbarColor"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/arrow_down" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="click_here_img, empty_list_img" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>